# GaiaWeb

./: .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  WebWorker.py  build.rs  docker-compose.yml  worker.py
docker/: Dockerfile  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  Settings.jsx  index.jsx
frontend/src/components/: AppBar.jsx  GaiaCard.jsx  GaiaCardList.jsx  GaiaForm.jsx  GaiaGrid.jsx  GoogleButton.jsx  LoginAlert.jsx
frontend/src/react-google-login/: google-login.js
frontend/src/stories/: 0-GaiaCard.stories.js  1-GaiaForm.stories.js
migrations/2020-05-07-134206_initial/: down.sql  up.sql
migrations/2020-05-14-214345_add_users/: down.sql  up.sql
migrations/2020-05-14-233236_add_csv/: down.sql  up.sql
migrations/2020-05-15-234956_switch_to_cluster_string/: down.sql  up.sql
migrations/2020-05-26-005139_add_title/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
src/graphql/: mod.rs  models.rs  schema.rs
worker/: Dockerfile  WebWorker.py  requirements.txt
