[package]
name = "gaia_web"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
base64 = "0.12.1"
serde = "1.0.111"
serde_json = "1.0.53"
log = "0.4.8"
tokio = { version = "0.2.21", features = ["macros"] }
env_logger = "0.7.1"
lapin = "1.0.0"
futures = "0.3.5"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
bytes = "0.5.4"
juniper = { git="https://github.com/graphql-rust/juniper" }
juniper_warp = { git="https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
juniper_subscriptions = { git="https://github.com/graphql-rust/juniper" }