[package]
name = "gaia_web"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
serde = "1.0.111"
serde_json = "1.0.53"
log = "0.4.8"
tokio = { version = "0.2.21", features = ["macros"] }
env_logger = "0.7.1"
lapin = "1.0.0"
futures = "0.3.5"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
actix-web = "2.0.0"
actix-multipart = "0.2.0"
actix-files = "0.2.2"
actix-rt = "1.1.1"
actix-web-actors = "2.0.0"
bytes = "0.5.4"
async-graphql = "1.15.2"
async-graphql-actix-web = "1.14.14"